[package]
name = "path"
version = "0.2.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
license = "MIT"
readme = "README.md"
keywords = ["connection", "tracking", "trace", "identification"]
repository = "https://github.com/saschagrunert/path"
homepage = "https://github.com/saschagrunert/path"
documentation = "https://docs.rs/path"
description = "IP based connection identification and tracing"

[dependencies]
fnv = "1"
linked-hash-map = "0"
log = "0"
mowl = "1"
time = "0"
